LAB_2/LED_DISPLAY_SITE/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http2_protocol_options: {}
          route_config:
            name: local_route
            virtual_hosts:
            - name: 
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service }
  clusters:
  - name: service
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ledsite
                port_value: 5000
    circuit_breakers:  # Add the circuit_breakers section here
      thresholds:
        - priority: DEFAULT
          max_connections: 10  # Set max connections to 10
