LAB_2/LED_DISPLAY_SITE/service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
     run.googleapis.com/launch-stage: BETA
  name: enel453-led-display
spec:
  template:
    metadata:
      annotations:
        run.googleapis.com/execution-environment: gen1 #or gen2
        run.googleapis.com/container-dependencies: "{envoy: [python-app]}"
    spec:
      containers:
      - image: gcr.io/atkin-1/enel453_labs_envoy:latest
        name: envoy
        ports:
          - containerPort: 8080
      - image: gcr.io/atkin-1/enel453_labs:latest
        name: python-app
        env:
          - name: PORT
            value: "5000"
